Fixed position of main navigation menu on small screens and larger. Adjusted CSS class so only tiny screens with no js will center the menu text.

--- a/src/assets/styles/modules/_link-list.css
+++ b/src/assets/styles/modules/_link-list.css
@@ -77,8 +77,10 @@
   *  > Has No JS   *
   *****************/
 
-  .has-no-js &--center-text-for-no-js {
-    text-align: center;
+  .has-no-js &--center-text-for-no-js-tiny {
+    @mixin forTiny {
+      text-align: center;
+    }
   }
 
 }
