--- a/src/assets/styles/modules/_site-header.css
+++ b/src/assets/styles/modules/_site-header.css
@@ -162,6 +162,9 @@ $header__menu-transition-time: 1000ms;
     @mixin atSmall {
       /*position*/
       left: 0;
+      position: relative;
+      /*width*/
+      width: 9rem;
     }
 
 
